<resources>
    <string name="app_name">Chalisa</string>
    <string name="hanuman_chalisa">श्री हनुमान चालीसा</string>
    <string name="arti">आरती</string>
    <string name="mantar">

       <br>मनोकामना पूर्ति के लिए मन्त्र- इस मंत्र का जप मंगलवार शाम\n</br>
       <br> को करने से एक साथ कई मनोकामनाओं की पूर्ति होने लगेगी। \n</br>
        <br><b>|| ॐ महाबलाय वीराय चिरंजिवीन उद्दते।\n</b></br>
          <br><b> हारिणे वज्र देहाय चोलंग्घितमहाव्यये। ||\n\n</b></br>

        <br></br>
       <br>  कर्ज से मुक्ति के लिए मंत्र \n</br>
       <br>  ॐ नमो हनुमते आवेशाय आवेशाय स्वाहा।\n\n</br>

       <br>  संकट दूर करने का हनुमान मंत्र \n</br>
        <br>  ऊँ नमो हनुमते रुद्रावताराय सर्वशत्रुसंहारणाय सर्वरोग हराय सर्ववशीकरणाय रामदूताय स्वाहा \n \n </br>

         <br>शत्रुओं और रोगों पर विजय पाने के लिए \n</br>
       <br> ॐ नमो हनुमते रुद्रावताराय सर्वशत्रुसंहारणाय सर्वरोग हराय सर्ववशीकरणाय रामदूताय स्वाहा \n\n</br>

        <br>कार्यों में बार-बार आ रही बाधाओं से मुक्ति के लिए\n</br>
        <br>आदिदेव नमस्तुभ्यं सप्तसप्ते दिवाकर!\n</br>
       <br> त्वं रवे तारय स्वास्मानस्मात्संसार सागरात!!\n\n</br>
       <br> प्रेत बाधा दूर करने के लिए\n</br>
        <br> हनुमन्नंजनी सुनो वायुपुत्र महाबल:। \n</br>
        <br> अकस्मादागतोत्पांत नाशयाशु नमोस्तुते।।\n</br>














    </string>
    <string name="kirplu_path"><br>॥ श्रीरामचन्द्र कृपालु ॥\n</br>

<br>श्री रामचन्द्र कृपालु भजुमन हरण भवभय दारुणं ।\n</br>
<br>नव कञ्ज लोचन कञ्ज मुख कर कञ्ज पद कञ्जारुणं ॥१॥\n</br>
<br>कन्दर्प अगणित अमित छवि नव नील नीरद सुन्दरं ।\n</br>
<br>पटपीत मानहुँ तडित रुचि शुचि नौमि जनक सुतावरं ॥२॥\n</br>
<br>भजु दीनबन्धु दिनेश दानव दैत्य वंश निकन्दनं ।\n</br>
<br>रघुनन्द आनन्द कन्द कोसल​ चन्द दशरथ नन्दनं ॥३॥\n</br>
<br>सिर मुकुट कुंडल तिलक चारु उदार अङ्ग विभूषणं ।\n</br>
<br>आजानु भुज शर चाप धर संग्राम जित खरदूषणं ॥४॥\n</br>
<br>इति वदति तुलसीदास शंकर शेष मुनि मन रंजनं ।\n</br>
<br>मम हृदय कंज निवास कुरु कामादि खलदल गंजनं ॥५॥\n</br>
<br>मनु जाहि राचेयु मिलहि सो वरु सहज सुन्दर सांवरो ।\n</br>
<br>करुणा निधान सुजान शीलु स्नेह जानत रावरो ॥६॥\n</br>
<br>एहि भांति गौरी असीस सुन सिय सहित हिय हरषित अली।\n</br>
<br>तुलसी भवानिहि पूजी पुनि-पुनि मुदित मन मन्दिर चली ॥७॥\n</br></string>
    <string name="arti_full">
        <br>आरती कीजै हनुमान लला की। दुष्ट दलन रघुनाथ कला की।।\n\n</br>
 <br>\n</br>
        <br>जाके बल से गिरिवर कांपे। रोग दोष जाके निकट न झांके।।\n\n</br>
        <br>\n</br>
        <br>अनजानी पुत्र महाबलदायी। संतान के प्रभु सदा सहाई।\n\n</br>
        <br>\n</br>
        <br>दे बीरा रघुनाथ पठाए। लंका जारी सिया सुध लाए।\n\n</br>
        <br>\n</br>
        <br>लंका सो कोट समुद्र सी खाई। जात पवनसुत बार न लाई।\n\n</br>
        <br>\n</br>
        <br>लंका जारी असुर संहारे। सियारामजी के काज संवारे।\n\n</br>
        <br>\n</br>
        <br>लक्ष्मण मूर्छित पड़े सकारे। आणि संजीवन प्राण उबारे।\n\n</br>
        <br>\n</br>
        <br>पैठी पताल तोरि जम कारे। अहिरावण की भुजा उखाड़े।\n\n</br>
        <br>\n</br>
        <br>बाएं भुजा असुरदल मारे। दाहिने भुजा संतजन तारे।\n\n</br>
        <br>\n</br>
        <br>सुर-नर-मुनि जन आरती उतारे। जै जै जै हनुमान उचारे।\n\n</br>
        <br>\n</br>
        <br>कंचन थार कपूर लौ छाई। आरती करत अंजना माई।\n\n</br>
        <br>\n</br>
        <br>लंकविध्वंस कीन्ह रघुराई। तुलसीदास प्रभु कीरति गाई।\n\n</br>
        <br>\n</br>
        <br>जो हनुमान जी की आरती गावै। बसी बैकुंठ परमपद पावै।\n\n</br>
        <br>\n</br>
        <br>आरती कीजै हनुमान लला की। दुष्ट दलन रघुनाथ कला की।\n\n</br>


    </string>
    <string name="bajrang_ban">श्री बजरंग बाण का पाठ</string>
    <string name="names_108">हर मंगलवार पढ़ें रामभक्त हनुमान के 108 चमत्कारी नाम</string>
    <string name="kirplu">॥ श्रीरामचन्द्र कृपालु ॥</string>
    <string name="names">
       <br> 1.आंजनेया</br>
<br>2.महावीर \n</br>
<br>3.हनूमत \n</br>
<br>4.मारुतात्मज \n</br>
<br>5.तत्वज्ञानप्रद \n</br>
<br>6.सीतादेविमुद्राप्रदायक \n</br>
<br>7.अशोकवनकाच्छेत्रे \n</br>
<br>8.सर्वमायाविभंजन \n</br>
<br>9.सर्वबन्धविमोक्त्रे \n</br>
<br>10.रक्षोविध्वंसकारक \n</br>
<br>11.परविद्या परिहार \n</br>
<br>12.परशौर्य विनाशन \n</br>
<br>13.परमन्त्र निराकर्त्रे \n</br>
<br>14.परयन्त्र प्रभेदक \n</br>
<br>15.सर्वग्रह विनाशी \n</br>
<br>16.भीमसेन सहायकृथे \n</br>
<br>17.सर्वदुखः हरा \n</br>
<br>18.सर्वलोकचारिणे \n</br>
<br>19.मनोजवाय \n</br>
<br>20.पारिजात द्रुमूलस्थ \n</br>
<br>21.सर्वमन्त्र स्वरूपवते \n</br>
<br>22.सर्वतन्त्र स्वरूपिणे \n</br>
<br>23.सर्वयन्त्रात्मक \n</br>
<br>24.कपीश्वर \n</br>
<br>25.महाकाय \n</br>
<br>26.सर्वरोगहरा \n</br>
<br>27.प्रभवे \n</br>
<br> सिद्धिकर \n</br>
<br>29.सर्वविद्या सम्पत्तिप्रदायक \n</br>
<br>30.कपिसेनानायक \n</br>
<br>31.भविष्यथ्चतुराननाय \n</br>
<br>32.कुमार ब्रह्मचारी \n</br>
<br>33.रत्नकुण्डल दीप्तिमते  \n</br>
<br>34.चंचलद्वाल सन्नद्धलम्बमान शिखोज्वला \n</br>
<br>35.गन्धर्व विद्यातत्वज्ञ, \n</br>
<br>36.महाबल पराक्रम \n</br>
<br>37.काराग्रह विमोक्त्रे \n</br>
<br>38.शृन्खला बन्धमोचक \n</br>
<br>39.सागरोत्तारक \n</br>
<br>40.प्राज्ञाय  \n</br>
<br>41.रामदूत \n</br>
<br>42.प्रतापवते \n</br>
<br>43.वानर \n</br>
<br>44.केसरीसुत \n</br>
<br>45.सीताशोक निवारक \n</br>
<br>46.अन्जनागर्भसम्भूता \n</br>
<br>47.बालार्कसद्रशानन \n</br>
<br>48.विभीषण प्रियकर \n</br>
<br>49.दशग्रीव कुलान्तक \n</br>
<br>50.लक्ष्मणप्राणदात्रे \n</br>
<br>51.वज्रकाय \n</br>
<br>52.महाद्युत \n</br>
<br>53.चिरंजीविने \n</br>
<br>54.रामभक्त \n</br>
<br>55.दैत्यकार्य विघातक \n</br>
<br>56.अक्षहन्त्रे \n</br>
<br>57.कांचनाभ \n</br>
<br>58.पंचवक्त्र \n</br>
<br>59.महातपसी \n</br>
<br>60.लन्किनी भंजन \n</br>
<br>61.श्रीमते \n</br>
<br>62.सिंहिकाप्राण भंजन \n</br>
<br>63.गन्धमादन शैलस्थ \n</br>
<br>64.लंकापुर विदायक \n</br>
<br>65.सुग्रीव सचिव \n</br>
<br>66.धीर \n</br>
<br>67.शूर \n</br>
<br>68.दैत्यकुलान्तक \n</br>
<br>69.सुरार्चित \n</br>
<br>70.महातेजस \n</br>
<br>71.रामचूडामणिप्रदायक \n</br>
<br>72.कामरूपिणे \n</br>
<br>73.पिंगलाक्ष \n</br>
<br>74.वार्धिमैनाक पूजित \n</br>
<br>75.कबलीकृत मार्ताण्डमण्डलाय \n</br>
<br>76.विजितेन्द्रिय \n</br>
<br>77.रामसुग्रीव सन्धात्रे \n</br>
<br>78.महारावण मर्धन \n</br>
<br>79.स्फटिकाभा \n</br>
<br>80.वागधीश \n</br>
<br>81.नवव्याकृतपण्डित \n</br>
<br>82.चतुर्बाहवे \n</br>
<br>83.दीनबन्धुरा \n</br>
<br>84.महात्मा \n</br>
<br>85.भक्तवत्सल \n</br>
<br>86.संजीवन नगाहर्त्रे \n</br>
<br>87.सुचये \n</br>
<br>88.वाग्मिने \n</br>
<br>89.दृढव्रता \n</br>
<br>90.कालनेमि प्रमथन \n</br>
<br>91.हरिमर्कट मर्कटा \n</br>
<br>92.दान्त \n</br>
<br>93.शान्त \n</br>
<br>94.प्रसन्नात्मने \n</br>
<br>95.शतकन्टमदापहते\n</br>
<br>96.योगी \n</br>
<br>97.रामकथा लोलाय \n</br>
<br>98.सीतान्वेषण पण्डित \n</br>
<br>99.वज्रद्रनुष्ट \n</br>
<br>100.वज्रनखा \n</br>
<br>101.रुद्रवीर्य समुद्भवा \n</br>
<br>102.इन्द्रजित्प्रहितामोघब्रह्मास्त्र विनिवारक \n</br>
<br>103.पार्थ ध्वजाग्रसंवासिने \n</br>
<br>104.शरपंजर भेदक \n</br>
<br>105.दशबाहवे \n</br>
<br>106.लोकपूज्य \n</br>
<br>107.जाम्बवत्प्रीतिवर्धन \n</br>
<br>108.सीताराम पादसेवक \n</br>
    </string>
    <string name="bajrang_baan_path">
   <br> चौपाई :\n\n</br>
<br>जय हनुमंत संत हितकारी। सुन लीजै प्रभु अरज हमारी॥\n\n</br>
<br>जन के काज बिलंब न कीजै। आतुर दौरि महा सुख दीजै॥\n\n</br>
<br>जैसे कूदि सिंधु महिपारा। सुरसा बदन पैठि बिस्तारा॥\n\n</br>
<br>आगे जाय लंकिनी रोका। मारेहु लात गई सुरलोका॥\n\n</br>
<br>जाय बिभीषन को सुख दीन्हा। सीता निरखि परमपद लीन्हा॥\n\n</br>
<br>बाग उजारि सिंधु महँ बोरा। अति आतुर जमकातर तोरा॥\n\n</br>
<br>अक्षय कुमार मारि संहारा। लूम लपेटि लंक को जारा॥\n\n</br>
<br>लाह समान लंक जरि गई। जय जय धुनि सुरपुर नभ भई॥\n\n</br>
<br>अब बिलंब केहि कारन स्वामी। कृपा करहु उर अंतरयामी॥\n\n</br>
<br>जय जय लखन प्रान के दाता। आतुर ह्वै दुख करहु निपाता॥\n\n</br>
<br>जै हनुमान जयति बल-सागर। सुर-समूह-समरथ भट-नागर॥\n\n</br>
<br>ॐ हनु हनु हनु हनुमंत हठीले। बैरिहि मारु बज्र की कीले॥\n\n</br>
<br>ॐ ह्नीं ह्नीं ह्नीं हनुमंत कपीसा। ॐ हुं हुं हुं हनु अरि उर सीसा॥\n\n</br>
<br>जय अंजनि कुमार बलवंता। शंकरसुवन बीर हनुमंता॥\n\n</br>
<br>बदन कराल काल-कुल-घालक। राम सहाय सदा प्रतिपालक॥\n\n</br>
<br>भूत, प्रेत, पिसाच निसाचर। अगिन बेताल काल मारी मर॥\n\n</br>
<br>इन्हें मारु, तोहि सपथ राम की। राखु नाथ मरजाद नाम की॥\n\n</br>
<br>सत्य होहु हरि सपथ पाइ कै। राम दूत धरु मारु धाइ कै॥\n\n</br>
<br>जय जय जय हनुमंत अगाधा। दुख पावत जन केहि अपराधा॥\n\n</br>
<br>पूजा जप तप नेम अचारा। नहिं जानत कछु दास तुम्हारा॥\n\n</br>
<br>बन उपबन मग गिरि गृह माहीं। तुम्हरे बल हौं डरपत नाहीं॥\n\n</br>
<br>जनकसुता हरि दास कहावौ। ताकी सपथ बिलंब न लावौ॥\n\n</br>
<br>जै जै जै धुनि होत अकासा। सुमिरत होय दुसह दुख नासा॥\n\n</br>
<br>चरन पकरि, कर जोरि मनावौं। यहि औसर अब केहि गोहरावौं॥\n\n</br>
<br>उठु, उठु, चलु, तोहि राम दुहाई। पायँ परौं, कर जोरि मनाई॥\n\n</br>
<br>ॐ चं चं चं चं चपल चलंता। ॐ हनु हनु हनु हनु हनुमंता॥\n\n</br>
<br>ॐ हं हं हाँक देत कपि चंचल। ॐ सं सं सहमि पराने खल-दल॥\n\n</br>
<br>अपने जन को तुरत उबारौ। सुमिरत होय आनंद हमारौ॥\n\n</br>
<br>यह बजरंग-बाण जेहि मारै। ताहि कहौ फिरि कवन उबारै॥\n\n</br>
<br>पाठ करै बजरंग-बाण की। हनुमत रक्षा करै प्रान की॥\n\n</br>
<br>यह बजरंग बाण जो जापैं। तासों भूत-प्रेत सब कापैं॥\n\n</br>
<br>धूप देय जो जपै हमेसा। ताके तन नहिं रहै कलेसा॥\n\n\n</br>
<br></br>
<br>दोहा :\n\n\n</br>
<br>उर प्रतीति दृढ़, सरन ह्वै, पाठ करै धरि ध्यान।\n\n</br>
<br>बाधा सब हर, करैं सब काम सफल हनुमान॥\n\n</br></string>
</resources>