<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
   >
<LinearLayout
    android:padding="10dp"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">
    <androidx.cardview.widget.CardView
        android:id="@+id/chalisa_card"
        android:layout_width="match_parent"
        android:layout_height="62dp"
        app:cardCornerRadius="8dp"
        android:layout_marginBottom="10dp"
        app:cardElevation="5dp">
        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5dp">
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="10dp"
                android:background="@drawable/backgorund_circle"
                android:src="@drawable/chalisa_icon"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hanuman_chalisa"
                android:layout_marginStart="10dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp" />

        </LinearLayout>



    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/arti_card"
        android:layout_width="match_parent"
        android:layout_height="62dp"
        app:cardCornerRadius="8dp"
        android:layout_marginBottom="10dp"
        app:cardElevation="5dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5dp">
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:padding="6dp"
                android:layout_marginLeft="10dp"
                android:background="@drawable/backgorund_circle"
                android:src="@drawable/arti_icon"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/arti"
                android:layout_marginLeft="10dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp" />

        </LinearLayout>



    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView

        android:id="@+id/bajrang_baan_card"
        android:layout_width="match_parent"
        android:layout_height="62dp"
        app:cardCornerRadius="8dp"
        android:layout_marginBottom="10dp"
        app:cardElevation="5dp">
        <LinearLayout
            android:padding="5dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="10dp"
                android:background="@drawable/backgorund_circle"
                android:src="@drawable/pancmukhi"
                android:layout_marginStart="10dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bajrang_ban"
                android:layout_marginLeft="10dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp" />

        </LinearLayout>



    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/names_card"
        android:layout_width="match_parent"
        android:layout_height="62dp"
        app:cardCornerRadius="8dp"
        android:layout_marginBottom="10dp"
        app:cardElevation="5dp">
        <LinearLayout
            android:padding="5dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="10dp"
                android:background="@drawable/backgorund_circle"
                android:src="@drawable/blue_image"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/names_108"
                android:layout_marginLeft="10dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp" />

        </LinearLayout>




    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/kirplu_card"
        android:layout_width="match_parent"
        android:layout_height="62dp"
        app:cardCornerRadius="8dp"
        android:layout_marginBottom="10dp"
        app:cardElevation="5dp">
        <LinearLayout
            android:padding="5dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="10dp"
                android:background="@drawable/backgorund_circle"
                android:src="@drawable/flying"
                android:layout_marginStart="10dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kirplu"
                android:layout_marginLeft="10dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp" />

        </LinearLayout>



    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/mantar_card"
        android:layout_width="match_parent"
        android:layout_height="62dp"
        app:cardCornerRadius="8dp"
        android:layout_marginBottom="10dp"
        app:cardElevation="5dp">
        <LinearLayout
            android:padding="5dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="10dp"
                android:background="@drawable/backgorund_circle"
                android:src="@drawable/chalisa_icon"
                android:layout_marginStart="10dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="हनुमान जी को प्रसन्न करने के लिए कुछ मंत्र हैं"
                android:layout_marginLeft="10dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp" />

        </LinearLayout>



    </androidx.cardview.widget.CardView>



</LinearLayout>
</layout>